fix image stretching #4

--- a/wp-content/themes/jnews-child/style.css
+++ b/wp-content/themes/jnews-child/style.css
@@ -13,3 +13,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 /* ------------------------------------------------------------------------- *
  *  Theme customization starts here
 /* ------------------------------------------------------------------------- */
+
+img {
+  object-fit: cover;
+}
